--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             padding: 0;
             box-sizing: border-box;
         }
-        #container {margin: auto;}
+        #container {margin: auto;font-family: monospace;}
     </style>
 </head>
 
