--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 <body>
   <div id="container"></div>
+  <script src="https://cdn.jsdelivr.net/npm/phaser@v3.80.1/dist/phaser.min.js  "></script>
     <script type="module" src="src/main.js"></script>
 </body>
 </html>
