--- a/index.html
+++ b/index.html
@@ -2,10 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/png" href="/favicon.png" />
+    <link rel="icon" type="image/png" href="./favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="/style.css">
-    <title>Phaserrr</title>
+    <link rel="stylesheet" href="./style.css">
+    <title>Abigail's sweet homecoming</title>
 
     <style>
         * {
@@ -19,7 +19,6 @@
 
 <body>
   <div id="container"></div>
-  <script src="https://cdn.jsdelivr.net/npm/phaser@v3.80.1/dist/phaser.min.js  "></script>
-    <script type="module" src="src/main.js"></script>
+<script type="module" src="./src/main.js"></script>
 </body>
 </html>
